<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.tecsup.proyectomovil.PrincipalActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/lnlTab1">

                    <ListView
                        android:id="@+id/lstNoticias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_span="2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/lnlTab2">

                    <ListView
                        android:id="@+id/lstTelefonos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_span="2">

                    </ListView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/lnlTab3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_tipo" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/spnTipos"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_descripcion" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:inputType="textMultiLine"
                        android:id="@+id/edtDescripcion" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_height="150dp"
                        android:layout_width="150dp"
                        android:layout_gravity="center">
                    </ImageView>

                    <Button
                        android:id="@+id/btnCapturar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_capturar" />

                    <Button
                        android:id="@+id/btnEnviar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_enviar" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </TabHost>

</LinearLayout>

